network-policy-exmp/ns-star.yml
apiVersion: v1
kind: Namespace
metadata:
  name: management-ui 
  labels:
    role: management-ui
---
kind: Namespace
apiVersion: v1
metadata:
  name: client
  labels:
    role: client
---
kind: Namespace
apiVersion: v1
metadata:
  name: stars
